# epic-steam-galaxy

./: .eslintrc.js  .gitignore  CHANGELOG.md  Pipfile  README.md  atos.py  cli.py  crc.py  egs.py  gog.py  goggame.py  grid.py  index.js  index.py  main.py  package-lock.json  package.json  pyproject.toml  requiremnets.txt  setup.py  steam.py  util.py
any/: epic.py
any/epic/: core.py
any/gog/: game.py  gogrepo.py  util.py
esg/: cli.py  grid.py  main.py  scripts.py  steam.py  util.py
esg/steam/: profiles.py  shortcuts.py
lib/: gog-api.js  gog-game.js
test/: games.json
