[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "esg-cli"
description = "Adds GOG & EGL games to Steam as shortcuts."
readme = "README.md"
requires-python = ">=3.7"
keywords = ["epic", "steam", "galaxy", "cli"]
license = { file = "LICENSE" }
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
  'click',
  'legendary-gl',
  'python-resize-image',
  'requests',
  'vdf',
]
dynamic = ["version"]

[project.scripts]
esg = "esg.scripts:cli"

[tool.setuptools.packages.find]
include = ["esg*"]
