[build-system]
  build-backend = "setuptools.build_meta"
  requires = ["setuptools", "setuptools-scm"]

[project]
  classifiers = ["Programming Language :: Python :: 3"]
  dependencies = [
    'click',
    'legendary-gl',
    'psutil',
    'python-resize-image',
    'requests',
    'vdf',
  ]
  description = "Adds GOG & EGL games to Steam as shortcuts."
  dynamic = ["version"]
  keywords = ["epic", "steam", "galaxy", "cli"]
  license = { file = "LICENSE" }
  name = "esg-cli"
  readme = "README.md"
  requires-python = ">=3.7"

[project.scripts]
  esg = "esg.cli:cli"

[tool.setuptools.packages.find]
include = ["esg*"]

[tool.black]
  line-length = 80
